syntax = "proto3";

message PersonMessage {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string company_name = 4;
}

message Empty {
}

message PersonMessageList {
  repeated PersonMessage items = 1;
}

message PersonIdMessage {
  int32 id = 1;
}

service PersonService {
    rpc Create(PersonMessage) returns (PersonMessage);
    rpc GetById(PersonIdMessage) returns (PersonMessage);
    rpc Get(Empty) returns (PersonMessageList);
}